<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nexforttorch.flashclub.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
       <item
        android:id="@+id/action_settingsok"
        android:orderInCategory="100"
        android:title="@string/action_settingsok"
        app:showAsAction="never"/>
             <item
        android:id="@+id/action_settingsok1"
        android:orderInCategory="100"
        android:title="@string/action_settingsok1"
        app:showAsAction="never"/>
                   <item
        android:id="@+id/action_settingsok2"
        android:orderInCategory="100"
        android:title="@string/action_settingsok2"
        app:showAsAction="never"/>
                    <item
        android:id="@+id/action_settingsok3"
        android:orderInCategory="100"
        android:title="@string/action_settingsok3"
        app:showAsAction="never"/>

</menu>
